# MyMusic

./: .gitignore  MessageDoc.md  README.md  vcpkg.json
Client/: Client.pro  basewindow.cpp  basewindow.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musiclist.cpp  musiclist.h  musiclist.ui  protocol.cpp  protocol.h  registerdia.cpp  registerdia.h  registerdia.ui  set.cpp  set.h  set.ui  tcpsocket.cpp  tcpsocket.h  tcpworkthread.cpp  tcpworkthread.h  titlebar.cpp  titlebar.h  volume.cpp  volume.h  volume.ui
MyMusic/: MyMusic.sln
MyMusic/MyMusic/: AIChatClient.cpp  AIChatClient.h  AudioEffectDialog.cpp  AudioEffectDialog.h  AudioProcessor.cpp  AudioProcessor.h  AudioStreamProcessor.cpp  AudioStreamProcessor.h  BottomPlayWidget.cpp  BottomPlayWidget.h  BottomPlayWidget.ui  BubbleFrame.cpp  BubbleFrame.h  CMakeLists.txt  ChatInputWidget.cpp  ChatInputWidget.h  ChatPage.cpp  ChatPage.h  ChatWidget.cpp  ChatWidget.h  DragDropLabel.cpp  DragDropLabel.h  Equalizer.cpp  Equalizer.h  LocalDataManager.cpp  LocalDataManager.h  LogManager.cpp  MetaTag.cpp  MetaTag.h  MyMusic.aps  MyMusic.rc  MyMusic.vcxproj  MyMusic.vcxproj.filters  MysqlDao.cpp  MysqlDao.h  MysqlManager.cpp  MysqlManager.h  NavItemWidget.cpp  NavItemWidget.h  NetworkImageLabel.cpp  (+70 more)
MyMusic/MyMusic/Common/: blockqueue.h
MyMusic/MyMusic/Common/Encrypt/: Encrypt.cpp  Encrypt.h
MyMusic/MyMusic/FFPlayer/: AudioDecoder.cpp  AudioDecoder.h  DecoderInterface.h  DecoderThreadManager.cpp  DecoderThreadManager.h  FFPlayer.cpp  FFPlayer.h  VideoDecoder.cpp  VideoDecoder.h
MyMusic/MyMusic/Tool/: FileInfo.h  FileInspectorImp.cpp  FileInspectorImp.h  FileInspectorInterface.h  directoryscannertask.cpp  directoryscannertask.h  filescannerworker.cpp  filescannerworker.h
MyMusic/MyMusic/source/font/: iconButton.qml
MyMusic/MyMusic/tableview/: elidedlabel.cpp  elidedlabel.h  playitemwidget.cpp  playitemwidget.h  res.qrc  songdelegate.cpp  songdelegate.h  sortproxymodel.cpp  sortproxymodel.h  tableheaderview.cpp  tableheaderview.h  tableview.cpp  tableview.h  tableviewmodel.cpp  tableviewmodel.h
Pic/: Client.css  res.qrc
Server/: Server.pro  album_artists.sql  albums.sql  artists.sql  dbope.cpp  dbope.h  dialog.cpp  dialog.h  files.sql  main.cpp  music.conf  playlist_songs.sql  playlists.sql  protocol.h  redis.windows.conf  restore.txt  song_artists.sql  songs.sql  sql.txt  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h  user.sql  workthread.cpp  workthread.h
Server/GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  ConfigManager.cpp  GateServer.sln  GateServer.vcxproj  GateServer.vcxproj.filters  GateService.cpp  GateService.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlManager.cpp  MysqlManager.h  RedisManager.cpp  RedisManager.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  global.h  main.cpp  message.pb.cc  message.pb.h  message.proto
Server/GateServer/Encrypt/: Encrypt.cpp  Encrypt.h
Server/SessionServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  ConfigManager.cpp  ConfigManager.h  DistLock.cpp  DistLock.h  DistributeLock.cpp  DistributeLock.h  LogManager.cpp  LogManager.h  LogicSystem.cpp  LogicSystem.h  MessageNode.cpp  MessageNode.h  MysqlDao.cpp  MysqlDao.h  MysqlManager.cpp  MysqlManager.h  PropertySheet.props  RedisManager.cpp  RedisManager.h  Server.cpp  Server.h  Session.cpp  Session.h  SessionGrpcClient.cpp  SessionGrpcClient.h  SessionServer.cpp  SessionServer.sln  SessionServer.vcxproj  SessionServer.vcxproj.filters  SessionServiceImpl.cpp  SessionServiceImpl.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  StorageGrpcClient.cpp  StorageGrpcClient.h  UserManager.cpp  UserManager.h  (+8 more)
Server/SessionServer/Common/Tools/ImgFmtInspector/: ImgFmtInspector.cpp  ImgFmtInspector.h
Server/StatusServer/: ConfigManager.cpp  RedisManager.cpp  RedisManager.h  Singleton.h  StatusServer.cpp  StatusServer.sln  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  global.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
Server/StorageServer/: CMakeLists.txt  CMakeSettings.json
Server/StorageServer/StorageServer/: CMakeLists.txt  config.ini  main.cpp
Server/StorageServer/StorageServer/Common/: AsioIOServicePool.cpp  AsioIOServicePool.h  ConfigManager.cpp  ConfigManager.h  FdfsClient.cpp  FdfsClient.h  LogManager.cpp  LogManager.h  Singleton.h  global.h
Server/StorageServer/StorageServer/gRPC/: StorageGrpcClient.cpp  StorageGrpcClient.h  StorageServiceImpl.cpp  StorageServiceImpl.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
Server/VarifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  proto.js  redis.js  server.js
Server/VerifyServer/: ConfigManager.cpp  ConfigManager.h  Email.cpp  Email.h  LogManager.cpp  LogManager.h  PropertySheet.props  RedisManager.cpp  RedisManager.h  Singleton.h  SmtpServer.cpp  SmtpServer.h  VerifyGrpcServer.cpp  VerifyGrpcServer.h  VerifyServer.sln  VerifyServer.vcxproj  VerifyServer.vcxproj.filters  VerifyServiceImpl.cpp  VerifyServiceImpl.h  config.ini  global.h  main.cpp  message.pb.cc  message.pb.h  message.proto
root/: dialog.cpp  dialog.h  root.pro
